--- a/Portfoilo/css/style2.css
+++ b/Portfoilo/css/style2.css
@@ -23,7 +23,7 @@ body.dark-mode a {
 }
 
 
-
+/* HEADER STYLES */
 
    .side-headline h1 {
     margin: 0px 0px 0px 0px;
@@ -35,20 +35,21 @@ body.dark-mode a {
   
    }
    
-   .toggle-btn {
-    background-color: #217eac;
-    padding: 6px 3px 5px 3px;
-    height: 20px;
-    width: 100px;
-    border-radius: 20px;
-    text-align: center;
-    font-size: 14px;
-    margin: 0px 0px 0px 0px;
-    border: 2px solid black;
-    position: relative;
-    bottom: 5px;
+   
+.toggle-btn {
+  background-color:#217eac;
+  padding: 6px 3px 5px 3px;
+  height: 20px;
+  width: 100px;
+  border-radius: 20px;              /* STYLES FOR THE DARK & LIGHT MODDE SWITCH */
+  text-align: center;
+  font-size: 14px;
+  border: 2px solid black;
+  margin: 0px 0px 0px 10px;
+  position: relative;
+  
 
-   }
+}
 
  
 
@@ -95,6 +96,38 @@ body.dark-mode a {
   .nav li a:hover {
     color:#217eac;
   }
+
+
+/* Breadcrumbs stylev*/
+.left-arrow, .right-arrow, a {
+  text-decoration: none;
+  color: black;
+  position: relative;
+  top: 1px;
+
+}
+
+.breadcrumb-item {
+  /* Add your styles here. For example: */
+  list-style: none;
+  list-style-position: inside;
+  display: inline;
+  margin: 0px 20px 0px 20px;
+  font-size: 12px;
+}
+
+
+
+.breadcrumbsContainer {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: space-evenly;
+  align-items: space-evenly;
+  gap: 20px;
+
+}
+
 /*resume styles*/ 
 
 .info-container {
@@ -224,6 +257,15 @@ h1 {
   bottom: 7px;
 }
 
+.tableSkills {
+  display: flex;
+  flex-direction: row;
+  flex-wrap:nowrap;
+  justify-content: space-evenly;
+  align-items: space-evenly;
+  gap: 10px;
+}
+
 
 section, .footer {
   padding: 2px 10px;
@@ -326,31 +368,27 @@ th {
 
    
 /* Footer styles*/
-.footer_container {
-  background-color: rgb(255, 255, 255);
-  text-align: center;
-  height: 40px;
-}
 
 footer p {
   font-family: 'Philosopher', sans-serif;
+  text-align: center;
 }
  
-.footer_container p {
-  font-size: 15px;
-  font-family: 'Philosopher', sans-serif; 
-  padding: 5px 0px 5px 0px;
-}
+
  
-.footer_container a i {
+footer a i {
+  position: relative;
   font-size: 20px;
   margin: 0px 20px 0px 20px;
   color: black;
+  left: 420px;
 }
 
-.footer_container #copyright {
+footer #copyright {
    font-size: 11px;
+ 
 }
+
 
 #fb {
   color: rgb(24, 119, 242);
